2009-06-04  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner.dll.sources:
	* Mono.Tuner.csproj: Update.
	* Mono.Tuner/InjectSecurityAttributes.cs:
	* Mono.Tuner/MoonlightAssemblyStep.cs: Change some accessibility
	keywords, to be able to override and inherit.
	* Mono.Tuner/MoonlightA11yProcessor.cs:
	* Mono.Tuner/MoonlightA11yAssemblyStep.cs: New steps for a11y.

2009-06-02  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner.csproj: Update.

	* Mono.Tuner/InjectSecurityAttributes.cs: Avoid NRE.

2009-05-28  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/InjectSecurityAttributes.cs: show a warning if using
	the MoonlightAssemblyStep but no secattr option is specified.

2009-05-15  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/InjectSecurityAttributes.cs: fix retrieval
	of generic methods.

2009-05-15  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/InjectSecurityAttributes.cs: fix issues
	with non unique MethodReference.ToString for generic method defs.

2009-04-24  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner.dll.sources: adjusted
	* Mono.Tuner/FilterAttributes.cs: new step to remove some known
	undesirable custom attributes.

2009-04-23  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/CheckVisibility.cs: check deep nested types.

2009-04-22  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/CheckVisibility.cs: take InternalsVisibleTo into account.

2009-04-22  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/CheckVisibility.cs: take FamAndAssem into account.

2009-04-22  Jb Evain  <jbevain@novell.com>

	* AdjustVisibility.cs: we're now turning non exposed fields and
	methods (API wise) that are `protected` into `protected and internal`.

2009-04-08  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner.csproj: Update.

2009-04-03  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/InjectSecurityAttributes.cs: Show a warning
	when the secattr file is not found.

2009-03-10  Jb Evain  <jbevain@novell.com>
