@@ -5,6 +5,8 @@ Mono.Tuner/AdjustVisibility.cs
 Mono.Tuner/CheckVisibility.cs
 Mono.Tuner/InjectSecurityAttributes.cs
 Mono.Tuner/MoonlightA11yAssemblyStep.cs
+Mono.Tuner/MoonlightA11yDescriptorGenerator.cs
 Mono.Tuner/MoonlightA11yProcessor.cs
+Mono.Tuner/MoonlightA11yUsageInspectionStep.cs
 Mono.Tuner/MoonlightAssemblyStep.cs
 Mono.Tuner/FilterAttributes.cs
